// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageIndicator > renders with 0 messages 1`] = `
<div
  class="message-indicator"
  data-v-6b63f7d9=""
>
  <div
    class="circle rounded-circle border-sm text-icon pa-2 d-flex justify-center align-center"
    data-v-39e8094e=""
    data-v-6b63f7d9=""
  >
    
    <i
      aria-hidden="true"
      class="v-icon notranslate v-theme--light v-icon--size-default"
      data-v-6b63f7d9=""
    >
      <svg
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.6199 4.28609H16.6675V11.9051C16.6675 12.4289 16.239 12.8575 15.7151 12.8575H4.28657V13.8099C4.28657 14.8575 5.14372 15.7147 6.19134 15.7147H15.7151L19.5247 19.5242V6.19085C19.5247 5.14323 18.6675 4.28609 17.6199 4.28609ZM14.7628 9.04799V2.38132C14.7628 1.33371 13.9056 0.476562 12.858 0.476562H2.38181C1.33419 0.476562 0.477051 1.33371 0.477051 2.38132V14.7623L4.28657 10.9528H12.858C13.9056 10.9528 14.7628 10.0956 14.7628 9.04799Z"
          fill="currentColor"
        />
      </svg>
    </i>
    
  </div>
  <div
    class="count d-flex justify-center align-center"
    data-show-count="false"
    data-v-6b63f7d9=""
  >
    0
  </div>
</div>
`;

exports[`MessageIndicator > renders with 1 message 1`] = `
<div
  class="message-indicator"
  data-v-6b63f7d9=""
>
  <div
    class="circle rounded-circle border-sm text-icon pa-2 d-flex justify-center align-center"
    data-v-39e8094e=""
    data-v-6b63f7d9=""
  >
    
    <i
      aria-hidden="true"
      class="v-icon notranslate v-theme--light v-icon--size-default"
      data-v-6b63f7d9=""
    >
      <svg
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.6199 4.28609H16.6675V11.9051C16.6675 12.4289 16.239 12.8575 15.7151 12.8575H4.28657V13.8099C4.28657 14.8575 5.14372 15.7147 6.19134 15.7147H15.7151L19.5247 19.5242V6.19085C19.5247 5.14323 18.6675 4.28609 17.6199 4.28609ZM14.7628 9.04799V2.38132C14.7628 1.33371 13.9056 0.476562 12.858 0.476562H2.38181C1.33419 0.476562 0.477051 1.33371 0.477051 2.38132V14.7623L4.28657 10.9528H12.858C13.9056 10.9528 14.7628 10.0956 14.7628 9.04799Z"
          fill="currentColor"
        />
      </svg>
    </i>
    
  </div>
  <div
    class="count d-flex justify-center align-center"
    data-show-count="true"
    data-v-6b63f7d9=""
  >
    1
  </div>
</div>
`;

exports[`MessageIndicator > renders with 2 messages 1`] = `
<div
  class="message-indicator"
  data-v-6b63f7d9=""
>
  <div
    class="circle rounded-circle border-sm text-icon pa-2 d-flex justify-center align-center"
    data-v-39e8094e=""
    data-v-6b63f7d9=""
  >
    
    <i
      aria-hidden="true"
      class="v-icon notranslate v-theme--light v-icon--size-default"
      data-v-6b63f7d9=""
    >
      <svg
        fill="none"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.6199 4.28609H16.6675V11.9051C16.6675 12.4289 16.239 12.8575 15.7151 12.8575H4.28657V13.8099C4.28657 14.8575 5.14372 15.7147 6.19134 15.7147H15.7151L19.5247 19.5242V6.19085C19.5247 5.14323 18.6675 4.28609 17.6199 4.28609ZM14.7628 9.04799V2.38132C14.7628 1.33371 13.9056 0.476562 12.858 0.476562H2.38181C1.33419 0.476562 0.477051 1.33371 0.477051 2.38132V14.7623L4.28657 10.9528H12.858C13.9056 10.9528 14.7628 10.0956 14.7628 9.04799Z"
          fill="currentColor"
        />
      </svg>
    </i>
    
  </div>
  <div
    class="count d-flex justify-center align-center"
    data-show-count="true"
    data-v-6b63f7d9=""
  >
    2
  </div>
</div>
`;
